@@ -1,3 +1,10 @@
+2012-12-15  Anders Carlsson  <andersca@apple.com>
+
+        Another build fix.
+
+        * UIProcess/WebContext.cpp:
+        (WebKit::WebContext::createDownloadProxy):
+
 2012-12-15  Andy Estes  <aestes@apple.com>
 
         [WebKit2] Have CustomProtocolManager and CustomProtocolManagerProxy store Connections for messaging
